force-app/main/default/objects/Facility__c/fields/Additional_Email__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email__c</fullName>
    <label>Additional Email</label>
    <type>Email</type>
</CustomField>