force-app/main/default/objects/Facility__c/fields/Admin_Cell__c.field-meta.xml
<CustomField>
    <fullName>Admin_Cell__c</fullName>
    <label>Admin Cell</label>
    <type>Phone</type>
</CustomField>