force-app/main/default/objects/Facility__c/fields/ADON_Email__c.field-meta.xml
<CustomField>
    <fullName>ADON_Email__c</fullName>
    <label>ADON Email</label>
    <type>Email</type>
</CustomField>