force-app/main/default/objects/Facility__c/fields/ADON_Name__c.field-meta.xml
<CustomField>
    <fullName>ADON_Name__c</fullName>
    <label>ADON Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>