force-app/main/default/objects/Facility__c/fields/AHTH__c.field-meta.xml
<CustomField>
    <fullName>AHTH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AHTH</label>
    <type>Checkbox</type>
</CustomField>