force-app/main/default/objects/Facility__c/fields/AHTH_End_Date__c.field-meta.xml
<CustomField>
    <fullName>AHTH_End_Date__c</fullName>
    <label>AHTH End Date</label>
    <type>Date</type>
</CustomField>