force-app/main/default/objects/Facility__c/fields/AHTH_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>AHTH_Launch_Date__c</fullName>
    <label>AHTH Launch Date</label>
    <type>Date</type>
</CustomField>