force-app/main/default/objects/Facility__c/fields/AHTH_On_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>AHTH_On_Hold_Date__c</fullName>
    <label>AHTH On Hold Date</label>
    <type>Date</type>
</CustomField>