force-app/main/default/objects/Facility__c/fields/AHTH_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>AHTH_Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AHTH Onboarding</label>
    <type>Checkbox</type>
</CustomField>