force-app/main/default/objects/Facility__c/fields/AHTH_Status__c.field-meta.xml
<CustomField>
    <fullName>AHTH_Status__c</fullName>
    <formula>IF(AHTH__c, &quot;Active&quot;,
IF(NOT(ISBLANK(AHTH_End_Date__c)), &quot;Inactive&quot;,
IF(NOT(ISBLANK(AHTH_On_Hold_Date__c)), &quot;On Hold&quot;,
IF(AHTH_Onboarding__c, &quot;Onboarding&quot;,
&quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AHTH Status</label>
    <type>Text</type>
</CustomField>