force-app/main/default/objects/Facility__c/fields/AKA_FKA__c.field-meta.xml
<CustomField>
    <fullName>AKA_FKA__c</fullName>
    <label>AKA/FKA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>