force-app/main/default/objects/Facility__c/fields/APCM__c.field-meta.xml
<CustomField>
    <fullName>APCM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>APCM</label>
    <type>Checkbox</type>
</CustomField>