force-app/main/default/objects/Facility__c/fields/APCM_End_Date__c.field-meta.xml
<CustomField>
    <fullName>APCM_End_Date__c</fullName>
    <label>APCM End Date</label>
    <type>Date</type>
</CustomField>