force-app/main/default/objects/Facility__c/fields/APCM_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>APCM_Launch_Date__c</fullName>
    <label>APCM Launch Date</label>
    <type>Date</type>
</CustomField>