force-app/main/default/objects/Facility__c/fields/APCM_On_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>APCM_On_Hold_Date__c</fullName>
    <label>APCM On Hold Date</label>
    <type>Date</type>
</CustomField>