force-app/main/default/objects/Facility__c/fields/APCM_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>APCM_Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>APCM Onboarding</label>
    <type>Checkbox</type>
</CustomField>