force-app/main/default/objects/Facility__c/fields/APCM_Status__c.field-meta.xml
<CustomField>
    <fullName>APCM_Status__c</fullName>
    <formula>IF(APCM__c, &quot;Active&quot;,
IF(NOT(ISBLANK(APCM_End_Date__c)), &quot;Inactive&quot;,
IF(NOT(ISBLANK(APCM_On_Hold_Date__c)), &quot;On Hold&quot;,
IF(APCM_Onboarding__c, &quot;Onboarding&quot;,
&quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APCM Status</label>
    <type>Text</type>
</CustomField>