force-app/main/default/objects/Facility__c/fields/BAA_Sent_By__c.field-meta.xml
<CustomField>
    <fullName>BAA_Sent_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BAA Sent By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>