force-app/main/default/objects/Facility__c/fields/BAA_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>BAA_Sent_Date__c</fullName>
    <label>BAA Sent Date</label>
    <type>Date</type>
</CustomField>