force-app/main/default/objects/Facility__c/fields/BAA_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>BAA_Signed_Date__c</fullName>
    <label>BAA Signed Date</label>
    <type>Date</type>
</CustomField>