force-app/main/default/objects/Facility__c/fields/BHI__c.field-meta.xml
<CustomField>
    <fullName>BHI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BHI</label>
    <type>Checkbox</type>
</CustomField>