force-app/main/default/objects/Facility__c/fields/BHI_End_Date__c.field-meta.xml
<CustomField>
    <fullName>BHI_End_Date__c</fullName>
    <label>BHI End Date</label>
    <type>Date</type>
</CustomField>