force-app/main/default/objects/Facility__c/fields/BHI_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>BHI_Launch_Date__c</fullName>
    <label>BHI Launch Date</label>
    <type>Date</type>
</CustomField>