force-app/main/default/objects/Facility__c/fields/BHI_On_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>BHI_On_Hold_Date__c</fullName>
    <label>BHI On Hold Date</label>
    <type>Date</type>
</CustomField>