force-app/main/default/objects/Facility__c/fields/BHI_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>BHI_Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BHI Onboarding</label>
    <type>Checkbox</type>
</CustomField>