force-app/main/default/objects/Facility__c/fields/BHI_Status__c.field-meta.xml
<CustomField>
    <fullName>BHI_Status__c</fullName>
    <formula>IF(BHI__c, &quot;Active&quot;,
IF(NOT(ISBLANK(BHI_End_Date__c)), &quot;Inactive&quot;,
IF(NOT(ISBLANK(BHI_On_Hold_Date__c)), &quot;On Hold&quot;,
IF(BHI_Onboarding__c, &quot;Onboarding&quot;,
&quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BHI Status</label>
    <type>Text</type>
</CustomField>