force-app/main/default/objects/Facility__c/fields/Call_With_Admins_DONs_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Call_With_Admins_DONs_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call With Admins/DONs Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Facilities4</relationshipName>
    <type>Lookup</type>
</CustomField>