force-app/main/default/objects/Facility__c/fields/Call_With_Admins_DONs_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_With_Admins_DONs_Date__c</fullName>
    <label>Call With Admins/DONs Date</label>
    <type>Date</type>
</CustomField>