force-app/main/default/objects/Facility__c/fields/CCM__c.field-meta.xml
<CustomField>
    <fullName>CCM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCM</label>
    <type>Checkbox</type>
</CustomField>