force-app/main/default/objects/Facility__c/fields/CCM_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CCM_End_Date__c</fullName>
    <label>CCM End Date</label>
    <type>Date</type>
</CustomField>