force-app/main/default/objects/Facility__c/fields/CCM_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>CCM_Launch_Date__c</fullName>
    <label>CCM Launch Date</label>
    <type>Date</type>
</CustomField>