force-app/main/default/objects/Facility__c/fields/CCM_On_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>CCM_On_Hold_Date__c</fullName>
    <label>CCM On Hold Date</label>
    <type>Date</type>
</CustomField>