force-app/main/default/objects/Facility__c/fields/CCM_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>CCM_Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCM Onboarding</label>
    <type>Checkbox</type>
</CustomField>