force-app/main/default/objects/Facility__c/fields/CCM_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>CCM_Opt_Out_Date__c</fullName>
    <label>CCM Opt Out Date</label>
    <type>Date</type>
</CustomField>