force-app/main/default/objects/Facility__c/fields/CCM_Status__c.field-meta.xml
<CustomField>
    <fullName>CCM_Status__c</fullName>
    <formula>IF(CCM__c, &quot;Active&quot;,
IF(NOT(ISBLANK(CCM_End_Date__c)), &quot;Inactive&quot;,
IF(NOT(ISBLANK(CCM_On_Hold_Date__c)), &quot;On Hold&quot;,
IF(CCM_Onboarding__c, &quot;Onboarding&quot;,
&quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCM Status</label>
    <type>Text</type>
</CustomField>