force-app/main/default/objects/Facility__c/fields/CCO_Email__c.field-meta.xml
<CustomField>
    <fullName>CCO_Email__c</fullName>
    <label>CCO Email</label>
    <type>Email</type>
</CustomField>