force-app/main/default/objects/Facility__c/fields/Census__c.field-meta.xml
<CustomField>
    <fullName>Census__c</fullName>
    <description>Patients on hand at the facility - NOT the certified bed count, which is Beds. Derived from active Patient records.</description>
    <inlineHelpText>Patients currently in the facility. Not the bed count.</inlineHelpText>
    <label>Census</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>