force-app/main/default/objects/Facility__c/fields/Chief_Clinical__c.field-meta.xml
<CustomField>
    <fullName>Chief_Clinical__c</fullName>
    <label>Chief Clinical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>