force-app/main/default/objects/Facility__c/fields/Client_Success_Lead__c.field-meta.xml
<CustomField>
    <fullName>Client_Success_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Success Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Facilities7</relationshipName>
    <type>Lookup</type>
</CustomField>