force-app/main/default/objects/Facility__c/fields/COCM__c.field-meta.xml
<CustomField>
    <fullName>COCM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COCM</label>
    <type>Checkbox</type>
</CustomField>