force-app/main/default/objects/Facility__c/fields/COCM_End_Date__c.field-meta.xml
<CustomField>
    <fullName>COCM_End_Date__c</fullName>
    <label>COCM End Date</label>
    <type>Date</type>
</CustomField>