force-app/main/default/objects/Facility__c/fields/COCM_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>COCM_Launch_Date__c</fullName>
    <label>COCM Launch Date</label>
    <type>Date</type>
</CustomField>