force-app/main/default/objects/Facility__c/fields/COCM_On_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>COCM_On_Hold_Date__c</fullName>
    <label>COCM On Hold Date</label>
    <type>Date</type>
</CustomField>