force-app/main/default/objects/Facility__c/fields/COCM_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>COCM_Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COCM Onboarding</label>
    <type>Checkbox</type>
</CustomField>