force-app/main/default/objects/Facility__c/fields/COCM_Status__c.field-meta.xml
<CustomField>
    <fullName>COCM_Status__c</fullName>
    <formula>IF(COCM__c, &quot;Active&quot;,
IF(NOT(ISBLANK(COCM_End_Date__c)), &quot;Inactive&quot;,
IF(NOT(ISBLANK(COCM_On_Hold_Date__c)), &quot;On Hold&quot;,
IF(COCM_Onboarding__c, &quot;Onboarding&quot;,
&quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COCM Status</label>
    <type>Text</type>
</CustomField>