force-app/main/default/objects/Facility__c/fields/Consented__c.field-meta.xml
<CustomField>
    <fullName>Consented__c</fullName>
    <description>Patients at this facility whose consent status is any Approved variant.</description>
    <label>Consented</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>