force-app/main/default/objects/Facility__c/fields/COO_Name__c.field-meta.xml
<CustomField>
    <fullName>COO_Name__c</fullName>
    <label>COO Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>