force-app/main/default/objects/Facility__c/fields/Corp_Dr_Edu__c.field-meta.xml
<CustomField>
    <fullName>Corp_Dr_Edu__c</fullName>
    <label>Corp Dr. Edu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>