force-app/main/default/objects/Facility__c/fields/Credential__c.field-meta.xml
<CustomField>
    <fullName>Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credential</label>
    <referenceTo>Credential__c</referenceTo>
    <relationshipLabel>Facilities</relationshipLabel>
    <relationshipName>Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>