force-app/main/default/objects/Facility__c/fields/CX_Lead__c.field-meta.xml
<CustomField>
    <fullName>CX_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CX Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Facilities (CX Lead)</relationshipLabel>
    <relationshipName>Facilities_CX_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>