force-app/main/default/objects/Facility__c/fields/Dashboard_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_End_Date__c</fullName>
    <label>Dashboard End Date</label>
    <type>Date</type>
</CustomField>