force-app/main/default/objects/Facility__c/fields/Dashboard_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Hold_Date__c</fullName>
    <label>Dashboard Hold Date</label>
    <type>Date</type>
</CustomField>