force-app/main/default/objects/Facility__c/fields/Dashboard_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Launch_Date__c</fullName>
    <label>Dashboard Launch Date</label>
    <type>Date</type>
</CustomField>