force-app/main/default/objects/Facility__c/fields/Dashboard_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dashboard Onboarding</label>
    <type>Checkbox</type>
</CustomField>