force-app/main/default/objects/Facility__c/fields/Dashboard_Status__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Status__c</fullName>
    <formula>IF(Dashboard__c, &quot;Active&quot;,
IF(NOT(ISBLANK(Dashboard_End_Date__c)), &quot;Inactive&quot;,
IF(NOT(ISBLANK(Dashboard_Hold_Date__c)), &quot;On Hold&quot;,
IF(Dashboard_Onboarding__c, &quot;Onboarding&quot;,
&quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dashboard Status</label>
    <type>Text</type>
</CustomField>