force-app/main/default/objects/Facility__c/fields/Director_of_Admission__c.field-meta.xml
<CustomField>
    <fullName>Director_of_Admission__c</fullName>
    <label>Director of Admission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>