force-app/main/default/objects/Facility__c/fields/Discharge_Planner_Role__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Planner_Role__c</fullName>
    <label>Discharge Planner Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Social Service Director</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>