force-app/main/default/objects/Facility__c/fields/DON_Cell__c.field-meta.xml
<CustomField>
    <fullName>DON_Cell__c</fullName>
    <label>DON Cell</label>
    <type>Phone</type>
</CustomField>