force-app/main/default/objects/Facility__c/fields/DON_Email__c.field-meta.xml
<CustomField>
    <fullName>DON_Email__c</fullName>
    <label>DON Email</label>
    <type>Email</type>
</CustomField>