force-app/main/default/objects/Facility__c/fields/DON_Name__c.field-meta.xml
<CustomField>
    <fullName>DON_Name__c</fullName>
    <label>DON Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>