force-app/main/default/objects/Facility__c/fields/Dozee__c.field-meta.xml
<CustomField>
    <fullName>Dozee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dozee</label>
    <type>Checkbox</type>
</CustomField>