force-app/main/default/objects/Facility__c/fields/Emmacare_ID__c.field-meta.xml
<CustomField>
    <fullName>Emmacare_ID__c</fullName>
    <label>Emmacare ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>