force-app/main/default/objects/Facility__c/fields/EmmaCare_Name__c.field-meta.xml
<CustomField>
    <fullName>EmmaCare_Name__c</fullName>
    <label>EmmaCare Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>