force-app/main/default/objects/Facility__c/fields/EMR_Access_Granted_By__c.field-meta.xml
<CustomField>
    <fullName>EMR_Access_Granted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EMR Access Granted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Facilities1</relationshipName>
    <type>Lookup</type>
</CustomField>