force-app/main/default/objects/Facility__c/fields/EMR_Access_Granted_Date__c.field-meta.xml
<CustomField>
    <fullName>EMR_Access_Granted_Date__c</fullName>
    <label>EMR Access Granted Date</label>
    <type>Date</type>
</CustomField>