force-app/main/default/objects/Facility__c/fields/Exclude_from_TCM_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_TCM_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from TCM Reporting</label>
    <type>Checkbox</type>
</CustomField>