force-app/main/default/objects/Facility__c/fields/Facilitation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Facilitation_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Manual confirmation that facilitation / IPV is finished. Required in addition to Active plus populated Seen before a facility leaves the scheduling list.</description>
    <inlineHelpText>Tick when facilitation at this facility is finished.</inlineHelpText>
    <label>Facilitation Complete</label>
    <type>Checkbox</type>
</CustomField>