force-app/main/default/objects/Facility__c/fields/Facility_NPI_Number__c.field-meta.xml
<CustomField>
    <fullName>Facility_NPI_Number__c</fullName>
    <label>Facility NPI Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>