force-app/main/default/objects/Facility__c/fields/First_Welcome_Letter_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Welcome_Letter_Sent_Date__c</fullName>
    <description>Stamped the first (and only) time the Lumina welcome letter is generated and sent to this facility. Leave blank to allow generation; populated value blocks re-sending.</description>
    <inlineHelpText>Stamped the first (and only) time the Lumina welcome letter is generated and sent to this facility. Leave blank to allow generation; populated value blocks re-sending.</inlineHelpText>
    <label>First Welcome Letter Sent Date</label>
    <type>Date</type>
</CustomField>