force-app/main/default/objects/Facility__c/fields/Gehrimed_Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Gehrimed_Facility_Name__c</fullName>
    <label>Gehrimed Facility Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>