force-app/main/default/objects/Facility__c/fields/Gehrimed_ID__c.field-meta.xml
<CustomField>
    <fullName>Gehrimed_ID__c</fullName>
    <label>Gehrimed ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>