force-app/main/default/objects/Facility__c/fields/Integrations_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Integrations_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integrations Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Facilities3</relationshipName>
    <type>Lookup</type>
</CustomField>