force-app/main/default/objects/Facility__c/fields/Integrations_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Integrations_Completed_Date__c</fullName>
    <label>Integrations Completed Date</label>
    <type>Date</type>
</CustomField>