force-app/main/default/objects/Facility__c/fields/Integrations_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Integrations_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integrations Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Facilities2</relationshipName>
    <type>Lookup</type>
</CustomField>