force-app/main/default/objects/Facility__c/fields/Integrations_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Integrations_Requested_Date__c</fullName>
    <label>Integrations Requested Date</label>
    <type>Date</type>
</CustomField>