force-app/main/default/objects/Facility__c/fields/IPVs_Active__c.field-meta.xml
<CustomField>
    <fullName>IPVs_Active__c</fullName>
    <formula>if(
or(
 CCM_Status__c = &quot;Active&quot;,
 BHI_Status__c = &quot;Active&quot;,
 COCM_Status__c = &quot;Active&quot;),
True,
False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IPVs Active</label>
    <type>Checkbox</type>
</CustomField>