force-app/main/default/objects/Facility__c/fields/Latest_CCM_Complete_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Latest_CCM_Complete_DateTime__c</fullName>
    <label>Latest CCM Complete DateTime</label>
    <type>DateTime</type>
</CustomField>