force-app/main/default/objects/Facility__c/fields/Latest_Discharge_Run_Date_3_Hours_Old__c.field-meta.xml
<CustomField>
    <fullName>Latest_Discharge_Run_Date_3_Hours_Old__c</fullName>
    <formula>ISBLANK( Latest_Discharge_Run_Date__c ) || 
(NOW() - Latest_Discharge_Run_Date__c) * 24 &gt; 0.75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Discharge Run Date 3 Hours Old</label>
    <type>Checkbox</type>
</CustomField>