force-app/main/default/objects/Facility__c/fields/Latest_Discharge_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Discharge_Run_Date__c</fullName>
    <label>Latest Discharge Run Date</label>
    <type>DateTime</type>
</CustomField>