force-app/main/default/objects/Facility__c/fields/Latest_Facility_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Facility_Check_Date__c</fullName>
    <label>Latest Facility Check Date</label>
    <type>DateTime</type>
</CustomField>