force-app/main/default/objects/Facility__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Facilities</relationshipLabel>
    <relationshipName>Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>