force-app/main/default/objects/Facility__c/fields/Leadership_Group__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Group__c</fullName>
    <label>Leadership Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>