force-app/main/default/objects/Facility__c/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <label>Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>