force-app/main/default/objects/Facility__c/fields/Market_Clinical_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Market_Clinical_Advisor__c</fullName>
    <label>Market Clinical Advisor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>