force-app/main/default/objects/Facility__c/fields/Market_Clinical_Lead__c.field-meta.xml
<CustomField>
    <fullName>Market_Clinical_Lead__c</fullName>
    <label>Market Clinical Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>