force-app/main/default/objects/Facility__c/fields/Market_Op_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Market_Op_Advisor__c</fullName>
    <label>Market Op Advisor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>