force-app/main/default/objects/Facility__c/fields/Matrix_ID__c.field-meta.xml
<CustomField>
    <fullName>Matrix_ID__c</fullName>
    <label>Matrix ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>