force-app/main/default/objects/Facility__c/fields/Matrix_Name__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Name__c</fullName>
    <label>Matrix Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>