force-app/main/default/objects/Facility__c/fields/Medical_Director__c.field-meta.xml
<CustomField>
    <fullName>Medical_Director__c</fullName>
    <label>Medical Director</label>
    <length>255</length>
    <type>Text</type>
</CustomField>