force-app/main/default/objects/Facility__c/fields/Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facilities</relationshipLabel>
    <relationshipName>Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>