force-app/main/default/objects/Facility__c/fields/Partner_Group__c.field-meta.xml
<CustomField>
    <fullName>Partner_Group__c</fullName>
    <label>Partner Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>