force-app/main/default/objects/Facility__c/fields/PCC_Facility_Code__c.field-meta.xml
<CustomField>
    <fullName>PCC_Facility_Code__c</fullName>
    <label>PCC Facility Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>