force-app/main/default/objects/Facility__c/fields/PCC_ID__c.field-meta.xml
<CustomField>
    <fullName>PCC_ID__c</fullName>
    <label>PCC_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>