force-app/main/default/objects/Facility__c/fields/PCM__c.field-meta.xml
<CustomField>
    <fullName>PCM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PCM</label>
    <type>Checkbox</type>
</CustomField>