force-app/main/default/objects/Facility__c/fields/PCM_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PCM_End_Date__c</fullName>
    <label>PCM End Date</label>
    <type>Date</type>
</CustomField>