force-app/main/default/objects/Facility__c/fields/PCM_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>PCM_Launch_Date__c</fullName>
    <label>PCM Launch Date</label>
    <type>Date</type>
</CustomField>