force-app/main/default/objects/Facility__c/fields/PCM_On_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>PCM_On_Hold_Date__c</fullName>
    <label>PCM On Hold Date</label>
    <type>Date</type>
</CustomField>