force-app/main/default/objects/Facility__c/fields/PCM_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>PCM_Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PCM Onboarding</label>
    <type>Checkbox</type>
</CustomField>