force-app/main/default/objects/Facility__c/fields/PCM_Status__c.field-meta.xml
<CustomField>
    <fullName>PCM_Status__c</fullName>
    <formula>IF(PCM__c, &quot;Active&quot;,
IF(NOT(ISBLANK(PCM_End_Date__c)), &quot;Inactive&quot;,
IF(NOT(ISBLANK(PCM_On_Hold_Date__c)), &quot;On Hold&quot;,
IF(PCM_Onboarding__c, &quot;Onboarding&quot;,
&quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCM Status</label>
    <type>Text</type>
</CustomField>