force-app/main/default/objects/Facility__c/fields/RDO_Email__c.field-meta.xml
<CustomField>
    <fullName>RDO_Email__c</fullName>
    <label>RDO Email</label>
    <type>Email</type>
</CustomField>