force-app/main/default/objects/Facility__c/fields/RDO_Name__c.field-meta.xml
<CustomField>
    <fullName>RDO_Name__c</fullName>
    <label>RDO Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>