force-app/main/default/objects/Facility__c/fields/Reg_Admin_Name__c.field-meta.xml
<CustomField>
    <fullName>Reg_Admin_Name__c</fullName>
    <label>Reg Admin Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>