force-app/main/default/objects/Facility__c/fields/Region_Market__c.field-meta.xml
<CustomField>
    <fullName>Region_Market__c</fullName>
    <label>Region Market</label>
    <length>255</length>
    <type>Text</type>
</CustomField>