force-app/main/default/objects/Facility__c/fields/Region_State_UID__c.field-meta.xml
<CustomField>
    <fullName>Region_State_UID__c</fullName>
    <formula>CASESAFEID( Parent_Company__c ) &amp; &quot;-&quot; &amp;  TEXT(Address__StateCode__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region State UID</label>
    <type>Text</type>
</CustomField>