force-app/main/default/objects/Facility__c/fields/Regional_Report_Point__c.field-meta.xml
<CustomField>
    <fullName>Regional_Report_Point__c</fullName>
    <label>Regional Report Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>