force-app/main/default/objects/Facility__c/fields/RNC_Email__c.field-meta.xml
<CustomField>
    <fullName>RNC_Email__c</fullName>
    <label>RNC Email</label>
    <type>Email</type>
</CustomField>