force-app/main/default/objects/Facility__c/fields/RNC_Name__c.field-meta.xml
<CustomField>
    <fullName>RNC_Name__c</fullName>
    <label>RNC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>