force-app/main/default/objects/Facility__c/fields/RNC_Phone__c.field-meta.xml
<CustomField>
    <fullName>RNC_Phone__c</fullName>
    <label>RNC Phone</label>
    <type>Phone</type>
</CustomField>