force-app/main/default/objects/Facility__c/fields/Rollout_Date_Scheduled_By__c.field-meta.xml
<CustomField>
    <fullName>Rollout_Date_Scheduled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rollout Date Scheduled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Facilities5</relationshipName>
    <type>Lookup</type>
</CustomField>