force-app/main/default/objects/Facility__c/fields/Rollout_Date_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Rollout_Date_Scheduled_Date__c</fullName>
    <label>Rollout Date Scheduled Date</label>
    <type>Date</type>
</CustomField>