force-app/main/default/objects/Facility__c/fields/Rollout_Status__c.field-meta.xml
<CustomField>
    <fullName>Rollout_Status__c</fullName>
    <label>Rollout Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>BAA Sent</fullName>
            </value>
            <value>
                <fullName>BAA Signed</fullName>
            </value>
            <value>
                <fullName>EMR Access</fullName>
            </value>
            <value>
                <fullName>Integrations Requested</fullName>
            </value>
            <value>
                <fullName>Integrations Completed</fullName>
            </value>
            <value>
                <fullName>Call with Admins/DONs</fullName>
            </value>
            <value>
                <fullName>Rollout Date Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>