force-app/main/default/objects/Facility__c/fields/Rollout_Status_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Rollout_Status_Updated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rollout Status Updated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Facilities6</relationshipName>
    <type>Lookup</type>
</CustomField>