force-app/main/default/objects/Facility__c/fields/RPM__c.field-meta.xml
<CustomField>
    <fullName>RPM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RPM</label>
    <type>Checkbox</type>
</CustomField>